force-app/main/default/objects/bofc__BOFCProfileFLSDetails__c/bofc__BOFCProfileFLSDetails__c.object-meta.xml
<CustomObject>
    <label>BOFCProfileFLSDetails</label>
    <nameField>
        <label>BOFCProfileFLSDetails Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>BOFCProfileFLSDetails</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>