force-app/main/default/objects/bofc__BOFCProfileFLSDetails__c/fields/bofc__Permissions__c.field-meta.xml
<CustomField>
    <fullName>bofc__Permissions__c</fullName>
    <label>Permissions</label>
    <length>131072</length>
    <type>LongTextArea</type>
</CustomField>