force-app/main/default/objects/bofc__BOFCProfileFLSDetails__c/fields/bofc__Profile_ID__c.field-meta.xml
<CustomField>
    <fullName>bofc__Profile_ID__c</fullName>
    <label>Profile ID</label>
    <length>255</length>
    <type>Text</type>
</CustomField>